More example nodes, for now